Fix p text-wraping in small screen

--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6{
   font-weight: 700;
 }
 p{
-  font-weight: 400 !important;
+  font-weight: 300 !important;
   letter-spacing: .1rem;
   font-size: 1rem;
 }
